--- a/Ex.14, v.2
+++ b/Ex.14, v.2
@@ -2,15 +2,17 @@
 
 
 long long int TenToTwo(int a){
-    int c=65536, i, s=0, f;
-    for(i=0; i<=16; i++){
-        f=c&a;
-        if(f!=0)
-            s=s*10+1;
+    int i=1, s=0;
+    while(a>1){
+        if(a&1==1)
+            s=s*i+1;
         else
-            s*=10;
-        c/=2;
+            s*=i;
+        i*=10;
+        a=a>>1;
     }
+    if(a==1)
+        s+=i;
     return s;
 }
 
